syntax = "proto3";
package KuaiShouPack;

message CSWebHeartbeat {
	uint64 timestamp = 1;
}

message SocketMessage {
    PayloadType payloadType = 1;
    CompressionType compressionType = 2;
    bytes payload = 3;

    enum CompressionType {
        UNKNOWN = 0;
        NONE = 1;
        GZIP = 2;
        AES = 3;
    }
}

enum PayloadType {
    UNKNOWN = 0;
    CS_HEARTBEAT = 1;
    CS_ERROR = 3;
    CS_PING = 4;
    PS_HOST_INFO = 51;
    SC_HEARTBEAT_ACK = 101;
    SC_ECHO = 102;
    SC_ERROR = 103;
    SC_PING_ACK = 104;
    SC_INFO = 105;
    CS_ENTER_ROOM = 200;
    CS_USER_PAUSE = 201;
    CS_USER_EXIT = 202;
    CS_AUTHOR_PUSH_TRAFFIC_ZERO = 203;
    CS_HORSE_RACING = 204;
    CS_RACE_LOSE = 205;
    CS_VOIP_SIGNAL = 206;
    SC_ENTER_ROOM_ACK = 300;
    SC_AUTHOR_PAUSE = 301;
    SC_AUTHOR_RESUME = 302;
    SC_AUTHOR_PUSH_TRAFFIC_ZERO = 303;
    SC_AUTHOR_HEARTBEAT_MISS = 304;
    SC_PIP_STARTED = 305;
    SC_PIP_ENDED = 306;
    SC_HORSE_RACING_ACK = 307;
    SC_VOIP_SIGNAL = 308;
    SC_FEED_PUSH = 310;
    SC_ASSISTANT_STATUS = 311;
    SC_REFRESH_WALLET = 312;
    SC_LIVE_CHAT_CALL = 320;
    SC_LIVE_CHAT_CALL_ACCEPTED = 321;
    SC_LIVE_CHAT_CALL_REJECTED = 322;
    SC_LIVE_CHAT_READY = 323;
    SC_LIVE_CHAT_GUEST_END = 324;
    SC_LIVE_CHAT_ENDED = 325;
    SC_RENDERING_MAGIC_FACE_DISABLE = 326;
    SC_RENDERING_MAGIC_FACE_ENABLE = 327;
    SC_RED_PACK_FEED = 330;
    SC_LIVE_WATCHING_LIST = 340;
    SC_LIVE_QUIZ_QUESTION_ASKED = 350;
    SC_LIVE_QUIZ_QUESTION_REVIEWED = 351;
    SC_LIVE_QUIZ_SYNC = 352;
    SC_LIVE_QUIZ_ENDED = 353;
    SC_LIVE_QUIZ_WINNERS = 354;
    SC_SUSPECTED_VIOLATION = 355;
    SC_SHOP_OPENED = 360;
    SC_SHOP_CLOSED = 361;
    SC_GUESS_OPENED = 370;
    SC_GUESS_CLOSED = 371;
    SC_PK_INVITATION = 380;
    SC_PK_STATISTIC = 381;
    SC_RIDDLE_OPENED = 390;
    SC_RIDDLE_CLOESED = 391;
    SC_RIDE_CHANGED = 412;
    SC_BET_CHANGED = 441;
    SC_BET_CLOSED = 442;
    SC_LIVE_SPECIAL_ACCOUNT_CONFIG_STATE = 645;
}

message CSWebEnterRoom {
    string token = 1;
    string liveStreamId = 2;
    uint32 reconnectCount = 3;
    uint32 lastErrorCode = 4;
    string expTag = 5;
    string attach = 6;
    string pageId = 7;
}

message SCWebEnterRoomAck {
    uint64 minReconnectMs = 1;
    uint64 maxReconnectMs = 2;
    uint64 heartbeatIntervalMs = 3;
}

message SCWebFeedPush {
    string displayWatchingCount = 1;
    string displayLikeCount = 2;
    uint64 pendingLikeCount = 3;
    uint64 pushInterval = 4;
    repeated WebCommentFeed commentFeeds = 5;
    string commentCursor = 6;
    repeated WebComboCommentFeed comboCommentFeed = 7;
    repeated WebLikeFeed likeFeeds = 8;
    repeated WebGiftFeed giftFeeds = 9;
    string giftCursor = 10;
    repeated WebSystemNoticeFeed systemNoticeFeeds = 11;
    repeated WebShareFeed shareFeeds = 12;
}

message WebCommentFeed {
    string id = 1;
    SimpleUserInfo user = 2;
    string content = 3;
    string deviceHash = 4;
    uint64 sortRank = 5;
    string color = 6;
    WebCommentFeedShowType showType = 7;
}

message SimpleUserInfo {
    string principalId = 1;
    string userName = 2;
    string headUrl = 3;
}

enum WebCommentFeedShowType {
    FEED_SHOW_UNKNOWN = 0;
    FEED_SHOW_NORMAL = 1;
    FEED_HIDDEN = 2;
}

message WebComboCommentFeed {
    string id = 1;
    string content = 2;
    uint32 comboCount = 3;
}

message WebLikeFeed {
    string id = 1;
    SimpleUserInfo user = 2;
    uint64 sortRank = 3;
    string deviceHash = 4;
}

message WebGiftFeed {
    string id = 1;
    SimpleUserInfo user = 2;
    uint64 time = 3;
    uint32 giftId = 4;
    uint64 sortRank = 5;
    string mergeKey = 6;
    uint32 batchSize = 7;
    uint32 comboCount = 8;
    uint32 rank = 9;
    uint64 expireDuration = 10;
    uint64 clientTimestamp = 11;
    uint64 slotDisplayDuration = 12;
    uint32 starLevel = 13;
    StyleType styleType = 14;
    WebLiveAssistantType liveAssistantType = 15;
    string deviceHash = 16;
    bool danmakuDisplay = 17;

    enum StyleType {
        UNKNOWN_STYLE = 0;
        BATCH_STAR_0 = 1;
        BATCH_STAR_1 = 2;
        BATCH_STAR_2 = 3;
        BATCH_STAR_3 = 4;
        BATCH_STAR_4 = 5;
        BATCH_STAR_5 = 6;
        BATCH_STAR_6 = 7;
    }
}

enum WebLiveAssistantType {
    UNKNOWN_ASSISTANT_TYPE = 0;
    SUPER = 1;
    JUNIOR = 2;
}

message WebSystemNoticeFeed {
    string id = 1;
    SimpleUserInfo user = 2;
    uint64 time = 3;
    string content = 4;
    uint64 displayDuration = 5;
    uint64 sortRank = 6;
    DisplayType displayType = 7;

    enum DisplayType {
        UNKNOWN_DISPLAY_TYPE = 0;
        COMMENT = 1;
        ALERT = 2;
        TOAST = 3;
    }
}

message WebShareFeed {
    string id = 1;
    SimpleUserInfo user = 2;
    uint64 time = 3;
    uint32 thirdPartyPlatform = 4;
    uint64 sortRank = 5;
    WebLiveAssistantType liveAssistantType = 6;
    string deviceHash = 7;
}